[package]
name = "secure_socket"
version = "0.0.4"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A small encrypted wrapper around TCP."
readme = "README.md"
keywords = ["socket", "tcp"]
categories = ["cryptography", "network-programming"]
repository = "https://github.com/thescribe11/SecureSocket.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = {version="0.6.1", features=["serde"]}
rand = "0.8.5"
base64 = "0.13.0"
sha2 = "0.10.2"
chacha20poly1305 = "0.10.0"
chrono = "0.4.19"